// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.typography > align addons and graphic icon to bottom 1`] = `
.c7 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c7 > span {
  display: inline-block;
}

.c7.c7 {
  max-width: unset;
}

.c2 {
  box-sizing: border-box;
  background-color: transparent;
  display: flex;
  min-height: 32px;
  outline: none;
  padding: 2px 0px;
  position: relative;
}

.c12 .c6 {
  align-items: center;
  background-color: rgb(241, 242, 244);
  border-radius: 50%;
  color: inherit;
  display: flex;
  font-size: 1.125rem;
  height: 1.5rem;
  justify-content: center;
  width: 1.5rem;
}

.c13 .c6 {
  align-items: center;
  background-color: rgb(241, 242, 244);
  border-radius: 50%;
  color: inherit;
  display: flex;
  font-size: 1.125rem;
  height: 1.5rem;
  justify-content: center;
  width: 1.5rem;
}

.c11 {
  align-items: center;
  display: flex;
  height: 48px;
  margin: 0px 4px 0px 0px;
  align-self: flex-end;
}

.c11 .c6 {
  align-items: center;
  background-color: rgb(241, 242, 244);
  border-radius: 50%;
  color: inherit;
  display: flex;
  font-size: 1.125rem;
  height: 1.5rem;
  justify-content: center;
  width: 1.5rem;
}

.c0 {
  color: rgb(33, 37, 44);
  font-family: "Open Sans", sans-serif;
  font-size: 2rem;
  font-weight: 400;
  margin: 8px 0px 0px;
  outline: none;
  padding: 0px 0px 8px;
  text-transform: unset;
  cursor: pointer;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.c0:focus-within {
  color: rgb(255, 255, 255);
}

.c0:focus-within .c1 {
  background-color: rgb(213, 0, 117);
  outline: rgb(51, 51, 51) dotted 1px;
}

.c0:focus-within .c10 .c6 {
  background-color: transparent;
}

.c8 {
  overflow-wrap: break-word;
  word-break: break-word;
  align-items: center;
  align-self: center;
  color: inherit;
  display: flex;
  flex-flow: row;
  flex: 1 1 0%;
  outline: none;
  padding: 0px 8px 0px 0px;
  position: relative;
  justify-content: space-between;
}

.c9 > * {
  display: inline;
}

.c5 {
  margin: 0px 8px 0px 0px;
}

.c14 .c4:first-child {
  margin-left: 8px;
}

.c3 {
  align-items: center;
  display: flex;
  font-size: medium;
  height: 48px;
  min-height: 32px;
  align-self: flex-end;
}

.c3 .c4:first-child {
  margin-left: 8px;
}

@media (pointer: coarse) {
  .c0:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(255, 255, 255);
  }

  .c0:active .c1 {
    background-color: rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c0:hover {
    color: rgb(255, 255, 255);
  }

  .c0:hover .c1 {
    background-color: rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c0:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c0:active .c10 .c6 {
    background-color: transparent;
  }
}

@media (pointer: fine) {
  .c0:hover .c10 .c6 {
    background-color: transparent;
  }
}

<div
  class="c0 typography-headline typography-headline--1 typography-headline--collapsible"
  data-role="typography-headline"
>
  <div
    class="c1 c2 typography-headline__wrapper"
    data-role="typography-headline-wrapper"
  >
    <div
      class="c3 typography-addons"
      data-role="typography-addons"
    >
      <div
        class="c4 c5 typography-addon"
        data-role="typography-addon"
      >
        <i
          class="c6 c7 plasma-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            edit
          </span>
        </i>
      </div>
    </div>
    <div
      class="c8 typography-headline__title"
      data-role="typography-headline-title"
      role="button"
      tabindex="0"
    >
      <div
        class="c9"
      >
        <div
          class="typography-headline__label"
          data-role="typography-headline-label"
        >
          <p>
            Test Headline
          </p>
          <p>
            With positions of graphic icon and addons swapped
          </p>
        </div>
      </div>
      <div
        class="c10 c11 typography-headline__graphic"
        data-role="typography-headline-graphic"
      >
        <i
          class="c6 c7 plasma-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            keyboard_arrow_down
          </span>
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.typography > rendering collapsible typography 1`] = `
.c7 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c7 > span {
  display: inline-block;
}

.c7.c7 {
  max-width: unset;
}

.c2 {
  box-sizing: border-box;
  background-color: transparent;
  display: flex;
  min-height: 32px;
  outline: none;
  padding: 2px 0px;
  position: relative;
}

.c5 {
  align-items: center;
  display: flex;
  height: 48px;
  margin: 0px 4px 0px 0px;
  align-self: flex-start;
}

.c5 .c6 {
  align-items: center;
  background-color: rgb(241, 242, 244);
  border-radius: 50%;
  color: inherit;
  display: flex;
  font-size: 1.125rem;
  height: 1.5rem;
  justify-content: center;
  width: 1.5rem;
}

.c0 {
  color: rgb(33, 37, 44);
  font-family: "Open Sans", sans-serif;
  font-size: 2rem;
  font-weight: 400;
  margin: 8px 0px 0px;
  outline: none;
  padding: 0px 0px 8px;
  text-transform: unset;
  cursor: pointer;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.c0:focus-within {
  color: rgb(255, 255, 255);
}

.c0:focus-within .c1 {
  background-color: rgb(213, 0, 117);
  outline: rgb(51, 51, 51) dotted 1px;
}

.c0:focus-within .c4 .c6 {
  background-color: transparent;
}

.c3 {
  overflow-wrap: break-word;
  word-break: break-word;
  align-items: center;
  align-self: center;
  color: inherit;
  display: flex;
  flex-flow: row;
  flex: 1 1 0%;
  outline: none;
  padding: 0px 8px 0px 0px;
  position: relative;
}

.c8 > * {
  display: inline;
}

@media (pointer: coarse) {
  .c0:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(255, 255, 255);
  }

  .c0:active .c1 {
    background-color: rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c0:hover {
    color: rgb(255, 255, 255);
  }

  .c0:hover .c1 {
    background-color: rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c0:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c0:active .c4 .c6 {
    background-color: transparent;
  }
}

@media (pointer: fine) {
  .c0:hover .c4 .c6 {
    background-color: transparent;
  }
}

<div
  class="c0 typography-headline typography-headline--1 typography-headline--collapsible"
  data-role="typography-headline"
>
  <div
    class="c1 c2 typography-headline__wrapper"
    data-role="typography-headline-wrapper"
  >
    <div
      class="c3 typography-headline__title"
      data-role="typography-headline-title"
      role="button"
      tabindex="0"
    >
      <div
        class="c4 c5 typography-headline__graphic"
        data-role="typography-headline-graphic"
      >
        <i
          class="c6 c7 plasma-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            keyboard_arrow_down
          </span>
        </i>
      </div>
      <div
        class="c8"
      >
        <div
          class="typography-headline__label"
          data-role="typography-headline-label"
        >
          Test Headline
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.typography > rendering typography 1`] = `
.c1 {
  box-sizing: border-box;
  background-color: transparent;
  display: flex;
  min-height: 32px;
  outline: none;
  padding: 2px 0px;
  position: relative;
}

.c4 {
  border-top: 2px solid rgb(226, 230, 233);
  bottom: -1px;
  left: 0px;
  position: absolute;
  right: 0px;
}

.c0 {
  color: blue;
  font-family: "Open Sans", sans-serif;
  font-size: 2rem;
  font-weight: 400;
  margin: 8px 0px 0px;
  outline: none;
  padding: 0px 0px 8px;
  text-transform: unset;
}

.c2 {
  overflow-wrap: break-word;
  word-break: break-word;
  align-items: center;
  align-self: center;
  color: inherit;
  display: flex;
  flex-flow: row;
  flex: 1 1 0%;
  outline: none;
  padding: 0px 8px 0px 0px;
  position: relative;
  text-align: left;
}

.c3 > * {
  display: inline;
}

<div
  aria-level="1"
  class="c0 typography-headline typography-headline--1 -u-justify-start test-class"
  data-role="typography-headline"
  id="test-id"
  role="heading"
  style="background-color: red;"
>
  <div
    class="c1 typography-headline__wrapper"
    data-role="typography-headline-wrapper"
  >
    <div
      class="c2 typography-headline__title"
      data-role="typography-headline-title"
    >
      <div
        class="c3"
      >
        <div
          class="typography-headline__label"
          data-role="typography-headline-label"
        >
          Test Headline
        </div>
      </div>
    </div>
    <div
      class="c4 typography-headline__divider"
      data-role="typography-headline-divider"
    />
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.typography > rendering typography body 1`] = `
.c0 {
  color: blue;
  margin: 0px 0px 16px;
  padding: 0px;
}

<div
  class="c0 typography-body test-class"
  data-role="typography-body"
  id="test-id"
  style="background-color: red;"
>
  Test Body
</div>
`;

exports[`com.mgmtp.a12.widgets.typography > rendering typography section 1`] = `
.c0 {
  display: block;
  margin: 0px;
  padding: 0px;
  width: 100%;
}

<div
  class="c0 typography-section test-class"
  data-role="typography-section"
  id="test-id"
  role="form"
  style="background-color: red;"
>
  Test Section
</div>
`;

exports[`com.mgmtp.a12.widgets.typography > swap position of graphic icon and addons and align icons to center 1`] = `
.c7 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c7 > span {
  display: inline-block;
}

.c7.c7 {
  max-width: unset;
}

.c2 {
  box-sizing: border-box;
  background-color: transparent;
  display: flex;
  min-height: 32px;
  outline: none;
  padding: 2px 0px;
  position: relative;
}

.c12 .c6 {
  align-items: center;
  background-color: rgb(241, 242, 244);
  border-radius: 50%;
  color: inherit;
  display: flex;
  font-size: 1.125rem;
  height: 1.5rem;
  justify-content: center;
  width: 1.5rem;
}

.c11 {
  align-items: center;
  display: flex;
  height: 48px;
  margin: 0px 4px 0px 0px;
  align-self: center;
}

.c11 .c6 {
  align-items: center;
  background-color: rgb(241, 242, 244);
  border-radius: 50%;
  color: inherit;
  display: flex;
  font-size: 1.125rem;
  height: 1.5rem;
  justify-content: center;
  width: 1.5rem;
}

.c0 {
  color: rgb(33, 37, 44);
  font-family: "Open Sans", sans-serif;
  font-size: 2rem;
  font-weight: 400;
  margin: 8px 0px 0px;
  outline: none;
  padding: 0px 0px 8px;
  text-transform: unset;
  cursor: pointer;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.c0:focus-within {
  color: rgb(255, 255, 255);
}

.c0:focus-within .c1 {
  background-color: rgb(213, 0, 117);
  outline: rgb(51, 51, 51) dotted 1px;
}

.c0:focus-within .c10 .c6 {
  background-color: transparent;
}

.c8 {
  overflow-wrap: break-word;
  word-break: break-word;
  align-items: center;
  align-self: center;
  color: inherit;
  display: flex;
  flex-flow: row;
  flex: 1 1 0%;
  outline: none;
  padding: 0px 8px 0px 0px;
  position: relative;
  justify-content: space-between;
}

.c9 > * {
  display: inline;
}

.c5 {
  margin: 0px 8px 0px 0px;
}

.c3 {
  align-items: center;
  display: flex;
  font-size: medium;
  height: 48px;
  min-height: 32px;
  align-self: center;
}

.c3 .c4:first-child {
  margin-left: 8px;
}

@media (pointer: coarse) {
  .c0:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    color: rgb(255, 255, 255);
  }

  .c0:active .c1 {
    background-color: rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c0:hover {
    color: rgb(255, 255, 255);
  }

  .c0:hover .c1 {
    background-color: rgb(213, 0, 117);
  }
}

@media (pointer: coarse) {
  .c0:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  }

  .c0:active .c10 .c6 {
    background-color: transparent;
  }
}

@media (pointer: fine) {
  .c0:hover .c10 .c6 {
    background-color: transparent;
  }
}

<div
  class="c0 typography-headline typography-headline--1 typography-headline--collapsible"
  data-role="typography-headline"
>
  <div
    class="c1 c2 typography-headline__wrapper"
    data-role="typography-headline-wrapper"
  >
    <div
      class="c3 typography-addons"
      data-role="typography-addons"
    >
      <div
        class="c4 c5 typography-addon"
        data-role="typography-addon"
      >
        <i
          class="c6 c7 plasma-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            edit
          </span>
        </i>
      </div>
    </div>
    <div
      class="c8 typography-headline__title"
      data-role="typography-headline-title"
      role="button"
      tabindex="0"
    >
      <div
        class="c9"
      >
        <div
          class="typography-headline__label"
          data-role="typography-headline-label"
        >
          <p>
            Test Headline
          </p>
          <p>
            With positions of graphic icon and addons swapped
          </p>
        </div>
      </div>
      <div
        class="c10 c11 typography-headline__graphic"
        data-role="typography-headline-graphic"
      >
        <i
          class="c6 c7 plasma-icon"
          data-role="plasma-icon"
        >
          <span
            aria-hidden="true"
          >
            keyboard_arrow_down
          </span>
        </i>
      </div>
    </div>
  </div>
</div>
`;
